--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,9 @@
     "modernizr": "3.3.1",
     "ng-file-upload": "12.0.4",
     "ngInfiniteScroll": "1.3.0",
-    "swagger-ui": "2.1.5"
+    "swagger-ui": "2.1.5",
+    "file-saver": "1.3.6",
+    "file-saver.js": "^1.20150507.2"
   },
   "devDependencies": {
     "angular-mocks": "1.5.8"
